--- a/snowflake/models/config.yml
+++ b/snowflake/models/config.yml
@@ -7,6 +7,7 @@ sources:
       - name: addresses
         description: Contains addresses of the photographers
       - name: people_raw
+      - name: children
 
 models:
   - name: addresses
@@ -19,3 +20,15 @@ models:
         tests:
           - unique
           - not_null
+  - name: children
+    config:
+      delta_hours: '1 DAY'
+      timestamp_column: '_airbyte_emitted_at'
+      tags: ['gdpr', 'pii']
+      merge_update_columns: ['FIRSTNAME', 'LASTNAME', 'GENDER', 'BIRTHDATE']
+    columns:
+      - name: id
+        tests:
+          - unique
+          - not_null
+
