--- a/models/foto/foto_orders.yml
+++ b/models/foto/foto_orders.yml
@@ -39,15 +39,17 @@ semantic_models:
       - name: payment_status
         type: categorical
     measures:
-      - name: sum_total_eur
-        description: the total order amount in eur
+      - name: gmv_eur
+        expr: sum_total_eur
+        description: the total order amount in eur / gmv
         agg: sum
-      - name: sum_total
-        description: the total order amount in the original currency
+      - name: gmv
+        expr: sum_total
+        description: the total order amount in the original currency / gmv
         agg: sum
       - name: order_count
-        expr: 1
-        agg: sum
+        expr: id
+        agg: count_distinct
       - name: photographers_with_orders
         description: distinct count of photographers placing orders
         agg: count_distinct
@@ -70,18 +72,18 @@ semantic_models:
         agg: average
 
 metrics:
-  - name: sum_total_eur
-    description: sum of total order amonunt in eur
+  - name: gmv_eur
+    description: sum of total order amount in eur
     type: simple
-    label: sum total eur
+    label: gmv eur
     type_params:
-      measure: sum_total_eur
-  - name: sum_total
-    description: sum of total order amonunt in the original currency
+      measure: gmv_eur
+  - name: gmv
+    description: sum of total order amount in the original currency
     type: simple
-    label: sum total
+    label: gmv
     type_params:
-      measure: sum_total
+      measure: gmv
   - name: count_orders
     description: count of orders.
     label: orders
@@ -95,7 +97,7 @@ metrics:
     type_params:
       expr: value / orders
       metrics:
-        - name: sum_total_eur
+        - name: gmv_eur
           alias: value
         - name: count_orders
           alias: orders
@@ -128,15 +130,21 @@ metrics:
           alias: min
         - name: max_total_eur
           alias: max
-  - name: ratio_usd_currency
-    description: Ratio of USD order amount per total order amonunt in eur
+  - name: ratio_usd_gmv
+    description: Ratio of USD order amount per gmv in eur
     type: ratio
-    label: ratio usd currency
+    label: ratio usd gmv
     type_params:
       numerator:
-        name: sum_total_eur
+        name: gmv_eur
         filter: |
             {{ Dimension('id__currency') }} = 'USD'
-        alias: usd_sum_total_eur
+        alias: usd_gmv_eur
       denominator:
-        name: sum_total_eur
+        name: gmv_eur
+  - name: rolling_gmv_eur
+    type: cumulative
+    label: rolling gmv eur per year
+    type_params:
+      measure: gmv_eur
+      window: 1 year
